CommentRepository에 JPA 적용